--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -13,7 +13,7 @@
    <ul>
       {% for q in question_list %}
          <a href="{% url 'polls:detail' q.id %}">
-            问题：{{ q.question_text }} 发布时间：{{ q.pubdate }}</a></li>
+            <li>问题：{{ q.question_text }} 发布时间：{{ q.pubdate }}</li></a>
       {% endfor %}
    </ul>
 </body>
